# MortgageSim

./: Makefile  README.md  pyproject.toml
FrontEnd/: package-lock.json  package.json
FrontEnd/src/: App.tsx  Box.tsx  Grid.tsx
archive/: pyproject.toml
archive/mortgage_sim/data_source/tables/loan_parameters/: table.py
archive/mortgage_sim/data_source/tables/recurring_payments/: record.py
cpp/: .gitignore  CMakeLists.txt  Makefile  deps.txt  prebuild.sh  vcpkg.json
cpp/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
mortgage_sim/archive/core/management/: management.py  recurring_payment.py  single_payment.py
mortgage_sim/archive/core/simulate/: initialiser.py  simulator_utils.py
mortgage_sim/archive/data_source/tables/recurring_payments/: table.py
mortgage_sim/archive/data_source/tables/single_payments/: record.py  schema.py
mortgage_sim/archive/data_source/tables/templates/: record.py  schema.py  table.py
mortgage_sim/archive/utils/: asserts.py
mortgage_sim/core/: management.py  recurring_payment.py  single_payment.py
mortgage_sim/core/management/: errors.py  loan_parameter.py  management.py  single_payment.py
mortgage_sim/core/models/: account.py
mortgage_sim/core/simulate/: simulator.py  simulator_utils.py
mortgage_sim/core/simulate/models/: account.py
mortgage_sim/data_source/: datasource.py  signatures.py
mortgage_sim/data_source/tables/: table.py
mortgage_sim/data_source/tables/events/: events.py  record.py  schema.py  table.py
mortgage_sim/data_source/tables/loan_parameters/: record.py  schema.py  table.py
mortgage_sim/data_source/tables/recurring_payments/: schema.py  table.py
mortgage_sim/data_source/tables/single_payment/: schema.py  table.py
mortgage_sim/data_source/tables/single_payments/: table.py
mortgage_sim/data_source/tables/templates/: record.py  schema.py  table.py
mortgage_sim/simulation/: calculations.py  streamlit.py  tax_bracket.py
mortgage_sim/utils/: asserts.py
mortgage_tracker/: index.html  package-lock.json  package.json
mortgage_tracker/src/: App.tsx
mortgage_tracker/src/components/: Button.module.css  Button.tsx
mortgage_tracker/src/pages/: AppPage.module.css  AppPage.tsx  Homepage.tsx
old/mortgage_sim/data_source/tables/events/: table.py
old/tests/: test_datasource.py
tests/: test_add_records.py  test_datasource.py
